# vidtty

./: .gitignore  LICENSE  LICENSE.md  Makefile  Makefile.2  Makefile.am  Makefile.bkp  README.md  README.md.old  ascii-video.py  binary-requirements.txt  build-dependencies-archlinux.txt  build-dependencies-debian.txt  build-dependencies-fedora.txt  build-dependencies-opensuse.txt  build-dependencies-termux.txt  build-dependencies-universal.txt  configure.ac  non-pip-requirements.txt  requirements.txt  vidtty.c  vidtty.py  vidtxt.md
